/*!
GLEDGER (GhostChain Ledger) service integration

Integration with GLEDGER for token management and 4-token economy operations.
*/

use crate::error::{BridgeError, Result, ServiceError, TokenError};
use crate::types::{Address, TokenAmount, TokenType, U256, MultiTokenFee};
use crate::services::ServiceEndpoint;
use std::collections::HashMap;
use tracing::{debug, instrument};
use serde::{Deserialize, Serialize};

/// GLEDGER service wrapper
pub struct GledgerService {
    endpoint: ServiceEndpoint,
    // Note: Using a simulated client until etherlink has GLEDGER client
    // client: GledgerClient,
}

impl GledgerService {
    /// Create a new GLEDGER service instance
    #[instrument(skip(endpoint))]
    pub async fn new(endpoint: &ServiceEndpoint) -> Result<Self> {
        debug!("Connecting to GLEDGER service at {}", endpoint.grpc_endpoint());

        // TODO: Replace with actual etherlink GLEDGER client when available
        // let client = GledgerClient::connect(endpoint.grpc_endpoint()).await
        //     .map_err(|e| BridgeError::Service(ServiceError::Gledger(format!(
        //         "Failed to connect to GLEDGER: {}", e
        //     ))))?;

        Ok(Self {
            endpoint: endpoint.clone(),
            // client,
        })
    }

    /// Get token balance for an address
    #[instrument(skip(self))]
    pub async fn get_balance(&self, address: &Address, token_type: TokenType) -> Result<TokenAmount> {
        debug!("Getting {} balance for address: {}", token_type, address);

        // TODO: Replace with actual GLEDGER API call
        // Simulated response for now
        let amount = match token_type {
            TokenType::Gcc => U256::from(1000000000000000000u64), // 1 GCC
            TokenType::Spirit => U256::from(500000000000000000u64), // 0.5 SPIRIT
            TokenType::Mana => U256::from(2000000000000000000u64), // 2 MANA
            TokenType::Ghost => U256::from(10), // 10 GHOST NFTs
        };

        let balance = TokenAmount::new(token_type, amount);
        debug!("Retrieved {} balance: {}", token_type, balance.to_human_readable());
        Ok(balance)
    }

    /// Get all token balances for an address
    #[instrument(skip(self))]
    pub async fn get_all_balances(&self, address: &Address) -> Result<MultiTokenBalance> {
        debug!("Getting all token balances for address: {}", address);

        let gcc_balance = self.get_balance(address, TokenType::Gcc).await?;
        let spirit_balance = self.get_balance(address, TokenType::Spirit).await?;
        let mana_balance = self.get_balance(address, TokenType::Mana).await?;
        let ghost_balance = self.get_balance(address, TokenType::Ghost).await?;

        let balances = MultiTokenBalance {
            address: address.clone(),
            gcc: gcc_balance,
            spirit: spirit_balance,
            mana: mana_balance,
            ghost: ghost_balance,
            last_updated: chrono::Utc::now(),
        };

        debug!("Retrieved all balances for address: {}", address);
        Ok(balances)
    }

    /// Transfer tokens between addresses
    #[instrument(skip(self))]
    pub async fn transfer_tokens(
        &self,
        from: &Address,
        to: &Address,
        amount: &TokenAmount,
    ) -> Result<TransferResult> {
        debug!(
            "Transferring {} {} from {} to {}",
            amount.to_human_readable(),
            amount.token_type,
            from,
            to
        );

        // Check balance first
        let current_balance = self.get_balance(from, amount.token_type).await?;
        if current_balance.amount.to_u64() < amount.amount.to_u64() {
            return Err(BridgeError::Token(TokenError::InsufficientBalance {
                token: amount.token_type.to_string(),
                required: amount.to_human_readable(),
                available: current_balance.to_human_readable(),
            }));
        }

        // TODO: Replace with actual GLEDGER API call
        // Simulated transfer for now
        let transfer_result = TransferResult {
            transaction_hash: "0xabcd1234...".to_string(),
            from: from.clone(),
            to: to.clone(),
            amount: amount.clone(),
            fee: calculate_transfer_fee(amount.token_type),
            success: true,
            block_number: 12345,
            timestamp: chrono::Utc::now(),
        };

        debug!(
            "Successfully transferred {} {} from {} to {}",
            amount.to_human_readable(),
            amount.token_type,
            from,
            to
        );

        Ok(transfer_result)
    }

    /// Calculate gas fees in multiple tokens
    #[instrument(skip(self))]
    pub async fn calculate_gas_fees(&self, operation: GasOperation) -> Result<MultiTokenFee> {
        debug!("Calculating gas fees for operation: {:?}", operation);

        let base_gas = match operation {
            GasOperation::Transfer => 21000,
            GasOperation::SmartContract => 100000,
            GasOperation::L2Settlement => 500000,
            GasOperation::CrossChain => 1000000,
        };

        // Calculate fees in each token type based on operation
        let gcc_fee = TokenAmount::new(
            TokenType::Gcc,
            U256::from(base_gas * 1000000000u64), // 1 gwei base
        );

        let spirit_fee = TokenAmount::new(
            TokenType::Spirit,
            if matches!(operation, GasOperation::L2Settlement) {
                U256::from(base_gas * 500000000u64) // 0.5 gwei for settlement
            } else {
                U256::ZERO
            },
        );

        let mana_fee = TokenAmount::new(
            TokenType::Mana,
            if matches!(operation, GasOperation::SmartContract) {
                U256::from(base_gas * 2000000000u64) // 2 gwei for smart contracts
            } else {
                U256::ZERO
            },
        );

        let ghost_fee = TokenAmount::new(
            TokenType::Ghost,
            if matches!(operation, GasOperation::CrossChain) {
                U256::from(1) // 1 GHOST for cross-chain
            } else {
                U256::ZERO
            },
        );

        let fees = MultiTokenFee {
            gcc_fee,
            spirit_fee,
            mana_fee,
            ghost_fee,
        };

        debug!("Calculated gas fees: total value = {}", fees.total_value());
        Ok(fees)
    }

    /// Update L2 balances after settlement
    #[instrument(skip(self))]
    pub async fn update_l2_balances(
        &self,
        state_updates: &[StateUpdate],
    ) -> Result<L2BalanceUpdateResult> {
        debug!("Updating L2 balances for {} accounts", state_updates.len());

        // TODO: Replace with actual GLEDGER API call
        let mut updated_accounts = Vec::new();

        for update in state_updates {
            // Simulate balance update
            updated_accounts.push(update.address.clone());
        }

        let result = L2BalanceUpdateResult {
            updated_accounts,
            total_updates: state_updates.len(),
            block_number: 12345,
            state_root: [0u8; 32], // TODO: Calculate actual state root
            timestamp: chrono::Utc::now(),
        };

        debug!("Successfully updated L2 balances for {} accounts", result.total_updates);
        Ok(result)
    }

    /// Get token pricing information
    #[instrument(skip(self))]
    pub async fn get_token_pricing(&self) -> Result<TokenPricing> {
        debug!("Retrieving token pricing information");

        // TODO: Replace with actual GLEDGER API call
        let pricing = TokenPricing {
            gcc_price_usd: 0.50,
            spirit_price_usd: 1.25,
            mana_price_usd: 0.75,
            ghost_floor_price_usd: 100.0,
            last_updated: chrono::Utc::now(),
        };

        debug!("Retrieved token pricing");
        Ok(pricing)
    }

    /// Health check for GLEDGER service
    pub async fn health_check(&self) -> Result<()> {
        debug!("Performing GLEDGER health check");
        // TODO: Implement actual health check
        Ok(())
    }
}

/// Multi-token balance for an address
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct MultiTokenBalance {
    pub address: Address,
    pub gcc: TokenAmount,
    pub spirit: TokenAmount,
    pub mana: TokenAmount,
    pub ghost: TokenAmount,
    pub last_updated: chrono::DateTime<chrono::Utc>,
}

/// Transfer operation result
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct TransferResult {
    pub transaction_hash: String,
    pub from: Address,
    pub to: Address,
    pub amount: TokenAmount,
    pub fee: TokenAmount,
    pub success: bool,
    pub block_number: u64,
    pub timestamp: chrono::DateTime<chrono::Utc>,
}

/// Gas operation types
#[derive(Debug, Clone, Copy, Serialize, Deserialize)]
pub enum GasOperation {
    Transfer,
    SmartContract,
    L2Settlement,
    CrossChain,
}

/// State update for L2 settlement
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct StateUpdate {
    pub address: Address,
    pub token_type: TokenType,
    pub balance_change: i64, // Can be negative for debits
    pub new_balance: U256,
}

/// L2 balance update result
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct L2BalanceUpdateResult {
    pub updated_accounts: Vec<Address>,
    pub total_updates: usize,
    pub block_number: u64,
    pub state_root: [u8; 32],
    pub timestamp: chrono::DateTime<chrono::Utc>,
}

/// Token pricing information
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct TokenPricing {
    pub gcc_price_usd: f64,
    pub spirit_price_usd: f64,
    pub mana_price_usd: f64,
    pub ghost_floor_price_usd: f64,
    pub last_updated: chrono::DateTime<chrono::Utc>,
}

/// Calculate transfer fee for a token type
fn calculate_transfer_fee(token_type: TokenType) -> TokenAmount {
    let fee_amount = match token_type {
        TokenType::Gcc => U256::from(1000000000000000u64), // 0.001 GCC
        TokenType::Spirit => U256::from(500000000000000u64), // 0.0005 SPIRIT
        TokenType::Mana => U256::from(750000000000000u64), // 0.00075 MANA
        TokenType::Ghost => U256::ZERO, // No transfer fee for GHOST
    };

    TokenAmount::new(token_type, fee_amount)
}

#[cfg(test)]
mod tests {
    use super::*;

    #[test]
    fn test_multi_token_balance() {
        let address = Address([1u8; 20]);
        let balances = MultiTokenBalance {
            address: address.clone(),
            gcc: TokenAmount::new(TokenType::Gcc, U256::from(1000)),
            spirit: TokenAmount::new(TokenType::Spirit, U256::from(500)),
            mana: TokenAmount::new(TokenType::Mana, U256::from(2000)),
            ghost: TokenAmount::new(TokenType::Ghost, U256::from(10)),
            last_updated: chrono::Utc::now(),
        };

        assert_eq!(balances.address, address);
        assert_eq!(balances.gcc.token_type, TokenType::Gcc);
    }

    #[test]
    fn test_transfer_fee_calculation() {
        let gcc_fee = calculate_transfer_fee(TokenType::Gcc);
        assert_eq!(gcc_fee.token_type, TokenType::Gcc);
        assert!(gcc_fee.amount.to_u64() > 0);

        let ghost_fee = calculate_transfer_fee(TokenType::Ghost);
        assert_eq!(ghost_fee.token_type, TokenType::Ghost);
        assert_eq!(ghost_fee.amount, U256::ZERO);
    }

    #[test]
    fn test_gas_operation_debug() {
        let op = GasOperation::SmartContract;
        let debug_str = format!("{:?}", op);
        assert!(debug_str.contains("SmartContract"));
    }
}